--- a/manager/design_cms.phtml
+++ b/manager/design_cms.phtml
@@ -3,19 +3,18 @@
 	Response.CharSet = "UTF-8"
 %>
 <!-- #INCLUDE File="local/local.phtml" -->
-<!-- #INCLUDE File="util/xt_func_util.phtml" -->
-<!-- #INCLUDE File="util/xt_func_string.phtml" -->
+<!-- #INCLUDE File="../util/xt_func_util.phtml" -->
+<!-- #INCLUDE File="../util/xt_func_string.phtml" -->
+<!-- #INCLUDE File="../util/xt_func_user_access.phtml" -->
 <!-- #INCLUDE File="include/i_login.phtml" -->
-<%
-	g_access_key = "02-b"
-%>
-<!-- #INCLUDE File="include/i_access.phtml" -->
-<!--#INCLUDE FILE="include/doctype.phtml"-->
+<!-- #INCLUDE FILE="include/doctype.phtml"-->
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- start: CSS REQUIRED FOR THIS PAGE ONLY -->
+<link href="vendor/bootstrap-touchspin/jquery.bootstrap-touchspin.min.css" rel="stylesheet" media="screen">
 <link href="vendor/select2/select2.min.css" rel="stylesheet" media="screen">
-<link href="vendor/DataTables/css/jquery.dataTables.css" rel="stylesheet" media="screen">
+<link href="vendor/bootstrap-datepicker/bootstrap-datepicker3.standalone.min.css" rel="stylesheet" media="screen">
+<link href="vendor/bootstrap-timepicker/bootstrap-timepicker.min.css" rel="stylesheet" media="screen">
 <link href="vendor/DataTables/css/DT_bootstrap.css" rel="stylesheet" media="screen">
 <!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
 <link rel="stylesheet" href="assets/css/custom.css">
@@ -31,13 +30,13 @@
 					<section id="page-title" class="padding-top-15 padding-bottom-15">
 						<div class="row">
 							<div class="col-sm-8">
-								<h1 class="mainTitle">Products</h1>
+								<h1 class="mainTitle">CMS Pages</h1>
 								<span class="mainDescription">overview &amp; list </span>
 							</div>
 							<ol class="breadcrumb">
-								<% if Session("CURRENT_ADMIN_VIEW_ID") = "1" then %>
-								<a href="catalog_product_detail.phtml?pf_id=0" class="btn btn-green btn-sm" role="button" style="float:right"><i class="ti-plus"></i> Add New Product</a>
-								<% end if %>
+								<a class="btn btn-green btn-sm" style="float:right" href="design_cms_page_edit.phtml?pid=0">
+								<i class="ti-plus"></i> Add New Page
+								</a>
 							</ol>
 						</div>
 					</section>
@@ -45,11 +44,9 @@
 					<div class="container-fluid container-fullw bg-white">
 						<div class="content-header-floating" style="display: block;">
 							<div class="content-header">
-								<h3 class="mainTitle">Products</h3>
+								<h3 class="mainTitle">CMS Pages</h3>
 								<p class="content-buttons form-buttons">
-									<% if Session("CURRENT_ADMIN_VIEW_ID") = "1" then %>
-									<a href="catalog_product_detail.phtml?pf_id=0" class="btn btn-green btn-sm" role="button" style="float:right"><i class="ti-plus"></i> Add New Product</a>
-									<% end if %>
+									<a href="design_cms_page_edit.phtml?pid=0" class="btn btn-green btn-sm" role="button" style="float:right"><i class="ti-plus"></i> Add New Page</a>
 								</p>	
 							</div>
 						</div>
@@ -58,44 +55,66 @@
 								<table class="table table-striped table-bordered table-hover table-full-width" id="sample_1">
 									<thead>
 									<tr>
-										<th>Product ID</th>
-										<th>Thumbnail</th>
-										<th>Name</th>
-										<th>SKU</th>
-										<th>Price</th>
-										<th>Qty</th>
-										<th>Category</th>
-										<th>Status</th>
-										<!--<th>Action</th>-->
+										<th>Page ID</th>
+										<th>Title</th>
+										<th>Date Created</th>
+										<th>
+										Last Modified
+										<%
+											  SELECT CASE Session("STORETIMEZONE")
+											  CASE "0"
+												  Response.Write("(PST)")
+											  CASE "1"
+												  Response.Write("(MST)")
+											  CASE "2"
+												  Response.Write("(CST)")
+											  CASE "3"
+												  Response.Write("(EST)")
+											  CASE ELSE
+												  Response.Write("(PST)")
+											  END SELECT
+										  %>
+										</th>
+										<th width="2%" nowrap>Page Size</th>
+										<th width="2%">Preview</th>
 									</tr>
+									
 									</thead>
 									<tbody>
 										<tr>
-											<td colspan="9" class="dataTables_empty">Loading data from server</td>
+											<td colspan="11" class="dataTables_empty">Loading data from server</td>
 										</tr>
 									</tbody>
 								</table>
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
 		</div>
 		<!--#INCLUDE FILE="include/footer.phtml"-->
 	</div>
-	<!--#INCLUDE FILE="include/js.phtml"-->
+	<!-- #INCLUDE FILE="include/js.phtml"-->
 	<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
+	<script src="vendor/maskedinput/jquery.maskedinput.min.js"></script>
+	<script src="vendor/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
+	<script src="vendor/autosize/autosize.min.js"></script>
+	<script src="vendor/selectFx/classie.js"></script>
+	<script src="vendor/selectFx/selectFx.js"></script>
 	<script src="vendor/select2/select2.min.js"></script>
+	<script src="vendor/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+	<script src="vendor/bootstrap-timepicker/bootstrap-timepicker.min.js"></script>
 	<script src="vendor/DataTables/jquery.dataTables.min.js"></script>
 	<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
-	<!-- start: CLIP-TWO JAVASCRIPTS -->
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/form-elements.js"></script>
 	<!-- start: JavaScript Event Handlers for this page -->
-	<%
-		order_display = "3"
-		order_filter = "All"
-	%>
+	
+
+
 	<script type="text/javascript">
+		
 	var oTable;
 	var v1 = "All";
 	var v2 = "All";
@@ -114,23 +133,20 @@
 				"iDisplayLength": 20,
 				"bServerSide": true,
 				"bAutoWidth": false,
-				"sAjaxSource": "api/sp_product_list.phtml?v1=" + v1 + "&v2=" + v2 + "&v3=" + v3 + "&z1=",
+				"sAjaxSource": "api/sp_cms.phtml",
 				"aoColumns": [ 
-					/* Product ID */  { "sClass": "left" },
-					/* Thumbnail */  { "sClass": "center","bSortable": false },
-					/* Name */  { "sClass": "left" },
-					/* sku */  { "sClass": "center" },
-					/* Price */  { "sClass": "text-right"},
-					/* Qty */ { "sClass": "text-right"},
-					/* Category */ { "sClass": "center","bSortable": false },
-					/* Status*/  { "sClass": "center" ,"bSortable": false}
+					/* Page ID */  { "sClass": "center" },
+					/* Page Title */  { "sClass": "left" },
+					/* Created Date */  { "sClass": "center" },
+					/* Last Updated */ { "sClass": "center" },
+					/* Page Size */ { "sClass": "center" },
+					/* Preview */ { "sClass": "center","bSortable": false }
 				  ],
 				  
 				"aaSorting": [[0, 'desc']],
-				
 				"aLengthMenu": [
-					[10, 20, 30, 40, 50],
-					[10, 20, 30, 40, 50] // change per page values here
+					[10, 20, 30, 40, 50, 100],
+					[10, 20, 30, 40, 50, 100] // change per page values here
 				],
 				
 				"oLanguage": {
@@ -156,6 +172,21 @@
 				} 
 			});
 			
+			$('#sample_1').on( 'draw.dt', function () {
+				//UIModals.init();
+				var $modal = $('#ajax-modal');
+				$('.ajax .demo').on('click', function () {
+					// create the backdrop and wait for next modal to be triggered
+					$('body').modalmanager('loading');
+					modal_po_id = $(this).data('id');
+					setTimeout(function () {
+						$modal.load('modal_ajax_po_email.phtml?po_id=' + modal_po_id, '', function () {
+							$modal.modal();
+						});
+					}, 1000);
+				});
+			} );
+			
 			$('#sample_1_wrapper .dataTables_filter input').addClass("form-control input-sm").attr("placeholder", "Search");
 			// modify table search input
 			$('#sample_1_wrapper .dataTables_length select').addClass("m-wrap small");
@@ -163,7 +194,7 @@
 			$('#sample_1_wrapper .dataTables_length select').select2();
 			// initialzie select2 dropdown
 		};
-		
+
 		return {
 			//main function to initiate template pages
 			init: function () {
@@ -175,40 +206,43 @@
 					oTable.fnReloadAjax(theURL);
 				}
 				else {
-					oTable.fnReloadAjax("sp_product_list.phtml?v1=All&v2=All&v3=All&z1=");
+					oTable.fnReloadAjax('sp_cms.phtml?v1=&v2=&z1=');
 				}
 			}
 		};
 	}();
-	
+
 	function StatusFilter (theObj)
 	{
-		v3 = theObj.value;
-		oTable.fnReloadAjax("sp_product_list.phtml?v1=" + v1 + "&v2=" + v2 + "&v3=" + theObj.value + "&z1=");
+		oTable.fnReloadAjax('api/sp_cms.phtml?v1=&v2=' + theObj.value + '&z1=');
 	}
-	
-	function VisibilityFilter (theObj)
+	function DateFilter()
 	{
-		v2 = theObj.value;
-		oTable.fnReloadAjax("sp_product_list.phtml?v1=" + v1 + "&v2=" + theObj.value + "&v3=" + v3 + "&z1=");
+		oTable.fnReloadAjax('api/sp_cms.phtml?v1=&v2=<%=cms_filter%>&DF=' + document.getElementById('DateRange').value + '&z1=');
 	}
 	
-	function TypeFilter (theObj)
+	$('#daterange').on('apply.daterangepicker', function(ev, picker) { 
+		oTable.fnReloadAjax('api/sp_cms.phtml?v1=&v2=<%=cms_filter%>&DF=' + document.getElementById('DateRange').value + '&z1=');
+		//do something, like clearing an input
+	 $('#daterange').val(''); 
+	}); 
+	function DeletePages()
 	{
-		v1 = theObj.value;
-		oTable.fnReloadAjax("sp_product_list.phtml?v1=" + theObj.value + "&v2=" + v2 + "&v3=" + v3 + "&z1=");
+		if(confirm("You are about to delete these pages.  Do you want to continue?"))
+			document.pageDelete.submit();
+		else
+			return false;
 	}
-	
-	
-	
+
 	</script>
+	
 	<script>
 		jQuery(document).ready(function() {
 			Main.init();
+			FormElements.init();
 			TableData.init();
 		});
 	</script>
 	<!-- end: JavaScript Event Handlers for this page -->
-	<!-- end: CLIP-TWO JAVASCRIPTS -->
 </body>
 </html>
